[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1023.0
margin_bottom = 599.0
rect_min_size = Vector2( 1000, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 600.0
rect_min_size = Vector2( 200, 0 )

[node name="ConnectPhantom" type="Button" parent="HBoxContainer/Actions"]
margin_right = 200.0
margin_bottom = 20.0
text = "Connect Phantom Wallet"

[node name="GetNFTAddress" type="Button" parent="HBoxContainer/Actions"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 44.0
disabled = true
text = "Get my NFT Addresses"

[node name="GetNFTDetails" type="Button" parent="HBoxContainer/Actions"]
margin_top = 48.0
margin_right = 200.0
margin_bottom = 68.0
disabled = true
text = "Get NFT Details"

[node name="BasicData" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 370.0
margin_bottom = 600.0

[node name="Wallet" type="HBoxContainer" parent="HBoxContainer/BasicData"]
margin_right = 166.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="HBoxContainer/BasicData/Wallet"]
margin_right = 101.0
margin_bottom = 14.0
text = "Wallet Address:"

[node name="WalletAddress" type="Label" parent="HBoxContainer/BasicData/Wallet"]
margin_left = 105.0
margin_right = 166.0
margin_bottom = 14.0
text = "0x4a5s1d"

[node name="ListOfNFT" type="VBoxContainer" parent="HBoxContainer/BasicData"]
margin_top = 40.0
margin_right = 166.0
margin_bottom = 32.0

[node name="Wallet2" type="HBoxContainer" parent="HBoxContainer/BasicData/ListOfNFT"]
margin_right = 166.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="HBoxContainer/BasicData/ListOfNFT/Wallet2"]
margin_right = 118.0
margin_bottom = 14.0
text = "My NFT Addresses"

[node name="NFTMeta" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 374.0
margin_right = 674.0
margin_bottom = 600.0

[node name="NFTName" type="Label" parent="HBoxContainer/NFTMeta"]
margin_right = 300.0
margin_bottom = 14.0
text = "Nameless NFT"

[node name="NFTAddress" type="Label" parent="HBoxContainer/NFTMeta"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/NFTMeta"]
margin_top = 36.0
margin_right = 300.0
margin_bottom = 336.0
rect_min_size = Vector2( 300, 300 )
expand = true

[connection signal="pressed" from="HBoxContainer/Actions/ConnectPhantom" to="." method="_on_ConnectPhantom_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GetNFTAddress" to="." method="_on_GetNFTAddress_pressed"]
[connection signal="pressed" from="HBoxContainer/Actions/GetNFTDetails" to="." method="_on_GetNFTDetails_pressed"]
